Remove extra targets from links

--- a/meditations/packs-love.html
+++ b/meditations/packs-love.html
@@ -153,7 +153,7 @@
                             каждые новые отношения.
                         </p>
                         <a href="let-go-of-the-pain-from-the-past-in-pack.html" class="pack-single-step-link"
-                            target="_blank" rel="noopener" aria-label="Подробнее об отпускании боли прошлого">
+                            aria-label="Подробнее об отпускании боли прошлого">
                             Подробнее →
                         </a>
                     </div>
@@ -165,8 +165,8 @@
                             отношения не из нужды и пустоты, а из наполненности. Чтобы выбирали, а не цеплялись за
                             любого, кто обратил внимание.
                         </p>
-                        <a href="harmony-inside-me-in-pack.html" class="pack-single-step-link" target="_blank"
-                            rel="noopener" aria-label="Подробнее о гармонии внутри себя">
+                        <a href="harmony-inside-me-in-pack.html" class="pack-single-step-link"
+                            aria-label="Подробнее о гармонии внутри себя">
                             Подробнее →
                         </a>
                     </div>
