--- a/meditations/packs-recharge.html
+++ b/meditations/packs-recharge.html
@@ -152,8 +152,8 @@
                         <p class="pack-single-step-text">Сначала убираем всё, что налипло. Чужие эмоции, негатив, косые
                             взгляды, зависть, тяжесть после общения с токсичными людьми. Всё, что не ваше, уходит. Как
                             генеральная уборка внутри.</p>
-                        <a href="free-mind-and-body-in-pack.html" class="pack-single-step-link" target="_blank"
-                            rel="noopener" aria-label="Подробнее об освобождении головы и тела">
+                        <a href="free-mind-and-body-in-pack.html" class="pack-single-step-link"
+                            aria-label="Подробнее об освобождении головы и тела">
                             Подробнее →
                         </a>
                     </div>
@@ -164,8 +164,8 @@
                         <p class="pack-single-step-text">После чистки часто бывает пусто. Убрали чужое, а своего ещё
                             нет. На этом этапе вы наполняетесь обратно. Возвращаете свою энергию, внутреннюю опору,
                             ощущение «я в себе».</p>
-                        <a href="energy-balance-in-pack.html" class="pack-single-step-link" target="_blank"
-                            rel="noopener" aria-label="Подробнее о балансе энергий">
+                        <a href="energy-balance-in-pack.html" class="pack-single-step-link"
+                            aria-label="Подробнее о балансе энергий">
                             Подробнее →
                         </a>
                     </div>
@@ -177,7 +177,7 @@
                             Чтобы вы могли общаться с людьми, ходить в толпу, сталкиваться с негативом, и оставаться в
                             своей энергии.</p>
                         <a href="family-protection-in-pack.html" class="pack-single-step-link"
-                            aria-label="Подробнее о родовой защите" target="_blank" rel="noopener">
+                            aria-label="Подробнее о родовой защите">
                             Подробнее →
                         </a>
                     </div>
