Change links to social

--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
                     и ищет выход
                 </p>
                 <div class="social-grid">
-                    <a class="social-card" href="https://instagram.com/_the_sun_tarot" target="_blank" rel="noopener">
+                    <a class="social-card" href="https://instagram.com/true_suria" target="_blank" rel="noopener">
                         <div class="social-icon">IG</div>
                         <div>
                             <div class="social-label">Instagram</div>
-                            <div class="social-handle">@_the_sun_tarot</div>
+                            <div class="social-handle">true_suria</div>
                         </div>
                     </a>
                     <a class="social-card" href="https://vk.ru/stukserdzavk" target="_blank" rel="noopener">
@@ -385,13 +385,6 @@
                             <div class="social-handle">Стук сердца</div>
                         </div>
                     </a>
-                    <a class="social-card" href="https://www.tiktok.com/@truesuria" target="_blank" rel="noopener">
-                        <div class="social-icon">TT</div>
-                        <div>
-                            <div class="social-label">TikTok</div>
-                            <div class="social-handle">@truesuria</div>
-                        </div>
-                    </a>
                     <a class="social-card" href="https://www.t.me/tarotmystic" target="_blank" rel="noopener">
                         <div class="social-icon">TG</div>
                         <div>
@@ -399,7 +392,13 @@
                             <div class="social-handle">Милая, иди обниму</div>
                         </div>
                     </a>
-
+                    <a class="social-card" href="https://www.tiktok.com/@true_suria" target="_blank" rel="noopener">
+                        <div class="social-icon">TT</div>
+                        <div>
+                            <div class="social-label">TikTok</div>
+                            <div class="social-handle">true_suria</div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
