Add new diagnostic

--- a/diagnostics.html
+++ b/diagnostics.html
@@ -310,7 +310,38 @@
                             Записаться на диагностику
                         </a>
                     </article>
-
+                    <!-- Диагностика на Мои способности -->
+                    <article class="diag-card">
+                        <figure class="diag-card-figure">
+                            <img src="assets/images/diagnostics-images/different-paths.png"
+                                alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
+                        </figure>
+                        <h3 class="diag-card-title">Диагностика «Мои способности»</h3>
+                        <p class="diag-card-tag">Диагностика + энергочистка</p>
+                        <p class="diag-card-text">
+                            Этот расклад идеально подходит для тех, кто
+                            хочет узнать, есть ли у него способности к
+                            магии и как их лучше развивать
+                        </p>
+                        <ul class="diag-points">
+                            <li>Ваш дар</li>
+                            <li>Для чего он вам дан?</li>
+                            <li>Как вам развивать свой дар?</li>
+                            <li>
+                                С какими трудностями вы
+                                столкнетесь, если будете его
+                                развивать?
+                            </li>
+                            <li>
+                                Что поможет преодолеть препятствия?
+                            </li>
+                            <li>Что принесет использование дара?</li>
+                        </ul>
+                        <p class="diag-price">2 000 ₽</p>
+                        <a href="#contact" class="diag-link">
+                            Записаться на диагностику
+                        </a>
+                    </article>
                 </div>
             </div>
         </section>
