Add new image for new product

--- a/diagnostics.html
+++ b/diagnostics.html
@@ -313,8 +313,8 @@
                     <!-- Диагностика на Мои способности -->
                     <article class="diag-card">
                         <figure class="diag-card-figure">
-                            <img src="assets/images/diagnostics-images/different-paths.png"
-                                alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
+                            <img src="assets/images/diagnostics-images/golden-ability-diag.png"
+                                alt="Таро-расклад на мои способности" class="diag-card-image">
                         </figure>
                         <h3 class="diag-card-title">Диагностика «Мои способности»</h3>
                         <p class="diag-card-tag">Диагностика + энергочистка</p>
