--- a/meditations.html
+++ b/meditations.html
@@ -69,8 +69,6 @@
             </nav>
         </div>
     </header>
-
-
     <main>
         <!-- Hero -->
         <section class="med-hero">
@@ -92,7 +90,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- Бесплатная медитация -->
         <section id="free-meditation" class="med-free">
             <div class="container med-free-inner">
                 <div class="med-free-text">
@@ -108,7 +106,6 @@
                         быть.
                     </p>
                 </div>
-
                 <div class="med-free-card">
                     <div class="med-free-label">Подарок от Сурии</div>
                     <div class="med-free-figure">
@@ -119,16 +116,13 @@
                         «Позволь себе быть мягкой, не теряя силы. Женственность — это не слабость, а глубокое доверие
                         жизни.»
                     </p>
-
                     <audio controls preload="none" class="med-free-audio">
                         <source src="assets/audio/awakening-of-femininity-meditation-free-audio.mp3" type="audio/mpeg">
                         Ваш браузер не поддерживает воспроизведение аудио.
                     </audio>
-
                 </div>
             </div>
         </section>
-
         <!-- Пакеты медитаций -->
         <!-- Секция 1: Пакеты -->
         <section id="packs-list" class="med-packs">
@@ -137,11 +131,9 @@
                 <p class="med-section-intro">
                     Готовые комплекты практик под ключевые запросы: опора, защита и исцеление сердца.
                 </p>
-
                 <div class="med-card-grid med-card-grid--packs">
                     <div class="med-card-grid">
                         <!-- ПАКЕТЫ (3 шт.) -->
-
                         <!-- Пакет: СВОБОДА -->
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
@@ -161,8 +153,7 @@
                                 aria-label="Узнать больше о восстановлении внутренней опоры">
                                 Узнать больше
                             </a>
-                        </article>
-                        <!-- Пакет: Любовь -->
+                        </article> <!-- Пакет: Любовь -->
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
                             <figure class="med-card-figure">
@@ -172,9 +163,12 @@
                             </figure>
                             <h3 class="med-card-title">ЛЮБОВЬ</h3>
                             <p class="med-card-text">
-                                Три медитации, которые работают вместе: сначала отпускаете боль прошлого, потом
-                                восстанавливаете уверенность и внутреннюю гармонию, и только потом открываетесь новой
-                                любви. Именно в таком порядке. Потому что пока внутри старые раны и неуверенность,
+                                Три медитации, которые работают вместе: сначала отпускаете боль прошлого,
+                                потом
+                                восстанавливаете уверенность и внутреннюю гармонию, и только потом
+                                открываетесь новой
+                                любви. Именно в таком порядке. Потому что пока внутри старые раны и
+                                неуверенность,
                                 настоящая любовь не приходит.
                             </p>
                             <p class="med-card-price">7 000 ₽</p>
@@ -183,7 +177,6 @@
                                 Узнать больше
                             </a>
                         </article>
-
                         <!-- Пакет: ПЕРЕЗАГРУЗКА -->
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
@@ -193,9 +186,12 @@
                             </figure>
                             <h3 class="med-card-title">ПЕРЕЗАГРУЗКА</h3>
                             <p class="med-card-text">
-                                Три медитации, которые работают вместе: сначала убираете всё чужое и налипшее, потом
-                                восстанавливаете свою энергию, и затем ставите защиту, чтобы больше не цеплялось. Именно
-                                в таком порядке. Полный цикл: очистить, наполнить, защитить. После него вы как новая.
+                                Три медитации, которые работают вместе: сначала убираете всё чужое и
+                                налипшее, потом
+                                восстанавливаете свою энергию, и затем ставите защиту, чтобы больше не
+                                цеплялось. Именно
+                                в таком порядке. Полный цикл: очистить, наполнить, защитить. После него вы
+                                как новая.
                             </p>
                             <p class="med-card-price">7 000 ₽</p>
                             <a href="meditations/packs-recharge.html" class="med-card-link"
@@ -234,7 +230,6 @@
                             Узнать больше
                         </a>
                     </article>
-
                     <!-- Отпускаю контроль -->
                     <article class="med-card">
                         <figure class="med-card-figure">
@@ -254,7 +249,6 @@
                             Узнать больше
                         </a>
                     </article>
-
                     <!-- Опора внутри меня (как одиночная версия, если продаётся отдельно) -->
                     <article class="med-card">
                         <figure class="med-card-figure">
@@ -274,7 +268,6 @@
                             Узнать больше
                         </a>
                     </article>
-
                     <!-- Защита рода -->
                     <article class="med-card">
                         <figure class="med-card-figure">
@@ -293,7 +286,6 @@
                             Узнать больше
                         </a>
                     </article>
-
                     <!-- Баланс энергии -->
                     <article class="med-card">
                         <figure class="med-card-figure">
@@ -313,7 +305,6 @@
                             Узнать больше
                         </a>
                     </article>
-
                     <!-- Освободи голову и тело -->
                     <article class="med-card">
                         <figure class="med-card-figure">
@@ -334,7 +325,6 @@
                             Узнать больше
                         </a>
                     </article>
-
                     <!-- Разрыв кармической связи -->
                     <article class="med-card">
                         <figure class="med-card-figure">
@@ -354,7 +344,6 @@
                             Узнать больше
                         </a>
                     </article>
-
                     <!-- Исполнение желания -->
                     <article class="med-card">
                         <figure class="med-card-figure">
@@ -373,7 +362,6 @@
                             Узнать больше
                         </a>
                     </article>
-
                     <!-- Гармония внутри себя -->
                     <article class="med-card">
                         <figure class="med-card-figure">
@@ -392,7 +380,6 @@
                             Узнать больше
                         </a>
                     </article>
-
                     <!-- Отпустить боль прошлого -->
                     <article class="med-card">
                         <figure class="med-card-figure">
@@ -411,14 +398,9 @@
                             Узнать больше
                         </a>
                     </article>
-
                 </div>
             </div>
         </section>
-
-
-
-
         <!-- Блок как пользоваться -->
         <section class="med-how">
             <div class="container med-how-inner">
@@ -431,7 +413,6 @@
                 </ul>
             </div>
         </section>
-
         <!-- Контакты -->
         <section id="contact">
             <div class="container contact-grid">
@@ -459,7 +440,6 @@
                         </div>
                     </a>
                 </div>
-
                 <div>
                     <form action="https://formspree.io/f/mgowdgyd" method="POST">
                         <div>
@@ -483,7 +463,6 @@
             </div>
         </section>
     </main>
-
     <footer class="med-footer">
         <div class="container med-footer-inner">
             <div>© 2025 Стук сердца by Suria</div>
