Fix responsiveness for carousel

--- a/readings.html
+++ b/readings.html
@@ -94,7 +94,9 @@
                             </p>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">3 000 ₽</p>
-                            <a href="#contact" class="reading-link">Запросить расклад</a>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
                         </article>
 
                         <article class="reading-card">
@@ -104,7 +106,9 @@
                                 всё идёт.
                             </p>
                             <p class="reading-meta">Формат: аудио-разбор + рекомендации</p>
-                            <a href="#contact" class="reading-link">Запросить расклад</a>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
                         </article>
 
                         <article class="reading-card">
@@ -114,7 +118,9 @@
                                 по-настоящему.
                             </p>
                             <p class="reading-meta">Формат: аудио-разбор</p>
-                            <a href="#contact" class="reading-link">Запросить расклад</a>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
                         </article>
                     </div>
                 </div>
@@ -136,20 +142,36 @@
                     <div class="readings-carousel-header">
                         <button class="readings-nav-btn" type="button" data-dir="prev"
                             aria-label="Предыдущий расклад">‹</button>
-                        <div class="readings-carousel-title">Любовь и отношения</div>
+                        <div class="readings-carousel-title">ОН + ОНА</div>
                         <button class="readings-nav-btn" type="button" data-dir="next"
                             aria-label="Следующий расклад">›</button>
                     </div>
 
                     <div class="readings-track" aria-label="Расклады про любовь">
                         <article class="reading-card">
-                            <h3 class="reading-title">Почему не складываются отношения</h3>
-                            <p class="reading-text">
-                                Разбор ваших личных сценариев: почему притягиваются «не те», где вы предаёте себя и как
-                                выйти из круга.
+                            <h3 class="reading-title">
+                                Есть ли другая женщина и его истинные намерения
+                            </h3>
+                            <p class="reading-lead">
+                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
                             </p>
-                            <p class="reading-meta">Формат: аудио-разбор 50–70 минут</p>
-                            <a href="#contact" class="reading-link">Запросить расклад</a>
+                            <ul class="reading-questions">
+                                <li>Что он чувствует ко мне?</li>
+                                <li>Что я для него значу в целом?</li>
+                                <li>Что он скрывает от меня?</li>
+                                <li>Есть ли у него другая женщина?</li>
+                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
+                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                                <li>Что он планирует предпринять в ближайшее время?</li>
+                                <li>Как мне дальше поступить?</li>
+                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
                         </article>
 
                         <article class="reading-card">
@@ -159,19 +181,12 @@
                                 всё идёт.
                             </p>
                             <p class="reading-meta">Формат: аудио-разбор + рекомендации</p>
-                            <a href="#contact" class="reading-link">Запросить расклад</a>
-                        </article>
-
-                        <article class="reading-card">
-                            <h3 class="reading-title">Мой путь к любви</h3>
-                            <p class="reading-text">
-                                Что нужно исцелить и отпустить внутри, чтобы любовь наконец пришла в вашу жизнь
-                                по-настоящему.
-                            </p>
-                            <p class="reading-meta">Формат: аудио-разбор</p>
-                            <a href="#contact" class="reading-link">Запросить расклад</a>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
                         </article>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -203,7 +218,9 @@
                                 поток.
                             </p>
                             <p class="reading-meta">Формат: аудио-разбор 40–60 минут</p>
-                            <a href="#contact" class="reading-link">Запросить расклад</a>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
                         </article>
 
                         <article class="reading-card">
@@ -213,7 +230,9 @@
                                 делу.
                             </p>
                             <p class="reading-meta">Формат: аудио-разбор + вектор движения</p>
-                            <a href="#contact" class="reading-link">Запросить расклад</a>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
                         </article>
 
                         <article class="reading-card">
@@ -223,7 +242,9 @@
                                 нельзя».
                             </p>
                             <p class="reading-meta">Формат: аудио-разбор</p>
-                            <a href="#contact" class="reading-link">Запросить расклад</a>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
                         </article>
                     </div>
                 </div>
