Add cards for indi readings

--- a/readings.html
+++ b/readings.html
@@ -86,11 +86,23 @@
                             aria-label="Следующий расклад">›</button>
                     </div>
 
-                    <div class="readings-track" aria-label="Расклады про любовь">
+                    <div class="readings-track" aria-label="Индивидуальные расклады">
                         <article class="reading-card">
                             <h3 class="reading-title">1 вопрос</h3>
                             <p class="reading-text">
                                 Подробный разбор вашей ситуации или вопроса с рекомендациями по работе с энергией.
+                            </p>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">2 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+
+                        <article class="reading-card">
+                            <h3 class="reading-title">3 вопроса</h3>
+                            <p class="reading-text">
+                                Подробный разбор вашей ситуации или 3 вопросов с рекомендациями по работе с энергией.
                             </p>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">3 000 ₽</p>
@@ -100,24 +112,24 @@
                         </article>
 
                         <article class="reading-card">
-                            <h3 class="reading-title">Наши отношения: перспективы</h3>
+                            <h3 class="reading-title">6 вопроса</h3>
                             <p class="reading-text">
-                                Для тех, кто уже в связке и не понимает, есть ли будущее, что чувствует партнёр и куда
-                                всё идёт.
+                                Подробный разбор вашей ситуации или 6 вопросов с рекомендациями по работе с энергией.
                             </p>
-                            <p class="reading-meta">Формат: аудио-разбор + рекомендации</p>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">5 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
                         </article>
 
                         <article class="reading-card">
-                            <h3 class="reading-title">Мой путь к любви</h3>
+                            <h3 class="reading-title">10 вопроса</h3>
                             <p class="reading-text">
-                                Что нужно исцелить и отпустить внутри, чтобы любовь наконец пришла в вашу жизнь
-                                по-настоящему.
+                                Подробный разбор вашей ситуации или 10 вопросов с рекомендациями по работе с энергией.
                             </p>
                             <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">7 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
@@ -142,7 +154,7 @@
                     <div class="readings-carousel-header">
                         <button class="readings-nav-btn" type="button" data-dir="prev"
                             aria-label="Предыдущий расклад">‹</button>
-                        <div class="readings-carousel-title">ОН + ОНА</div>
+                        <div class="readings-carousel-title">НА ИЗМЕНУ</div>
                         <button class="readings-nav-btn" type="button" data-dir="next"
                             aria-label="Следующий расклад">›</button>
                     </div>
@@ -150,7 +162,7 @@
                     <div class="readings-track" aria-label="Расклады про любовь">
                         <article class="reading-card">
                             <h3 class="reading-title">
-                                Есть ли другая женщина и его истинные намерения
+                                ОН + ОНА
                             </h3>
                             <p class="reading-lead">
                                 Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
