--- a/readings.html
+++ b/readings.html
@@ -160,6 +160,216 @@
                     </div>
 
                     <div class="readings-track" aria-label="Расклады про любовь">
+                        <!-- Расклады про любовь - 1 - ОН + ОНА -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ОН + ОНА
+                            </h3>
+                            <p class="reading-lead">
+                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Что он чувствует ко мне?</li>
+                                <li>Что я для него значу в целом?</li>
+                                <li>Что он скрывает от меня?</li>
+                                <li>Есть ли у него другая женщина?</li>
+                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
+                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                                <li>Что он планирует предпринять в ближайшее время?</li>
+                                <li>Как мне дальше поступить?</li>
+                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 2 - ЕГО ОДИНОЧЕСТВО -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ЕГО ОДИНОЧЕСТВО
+                            </h3>
+                            <p class="reading-lead">
+                                Расклад для тех, кто находится на грани развода/расставания
+                            </p>
+                            <ul class="reading-questions">
+                                <li>
+                                    Какие истинные мотивы и намерения у партнёра в контексте брака и возможного развода?
+                                </li>
+                                <li>
+                                    Какова реальная причина его потребности в одиночестве и отдалении?
+                                </li>
+                                <li>
+                                    Что он пытается найти в этом процессе?
+                                </li>
+                                <li>Есть ли у него другие отношения?</li>
+                                <li>Что он от вас скрывает?</li>
+                                <li>Кто вы для него истинно?/Какие у него истинные чувства к вам? </li>
+                                <li>Честен ли он с вами?</li>
+                                <li>Сможет ли он понять, что ваши отношения все таки нужны ему?</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 3 - ДИАГНОСТИКА ПАРЫ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ДИАГНОСТИКА ПАРЫ
+                            </h3>
+                            <p class="reading-lead">
+                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Что он чувствует ко мне?</li>
+                                <li>Что я для него значу в целом?</li>
+                                <li>Что он скрывает от меня?</li>
+                                <li>Есть ли у него другая женщина?</li>
+                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?
+
+                                </li>
+                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                                <li>Что он планирует предпринять в ближайшее время?</li>
+                                <li>Как мне дальше поступить?</li>
+                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 4 - ЛЮБОВНЫЙ ТРЕУГОЛЬНИК -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ЛЮБОВНЫЙ ТРЕУГОЛЬНИК
+                            </h3>
+                            <p class="reading-lead">
+                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Что он чувствует ко мне?</li>
+                                <li>Что я для него значу в целом?</li>
+                                <li>Что он скрывает от меня?</li>
+                                <li>Есть ли у него другая женщина?</li>
+                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
+                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                                <li>Что он планирует предпринять в ближайшее время?</li>
+                                <li>Как мне дальше поступить?</li>
+                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ОН + ОНА
+                            </h3>
+                            <p class="reading-lead">
+                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Что он чувствует ко мне?</li>
+                                <li>Что я для него значу в целом?</li>
+                                <li>Что он скрывает от меня?</li>
+                                <li>Есть ли у него другая женщина?</li>
+                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
+                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                                <li>Что он планирует предпринять в ближайшее время?</li>
+                                <li>Как мне дальше поступить?</li>
+                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ОН + ОНА
+                            </h3>
+                            <p class="reading-lead">
+                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Что он чувствует ко мне?</li>
+                                <li>Что я для него значу в целом?</li>
+                                <li>Что он скрывает от меня?</li>
+                                <li>Есть ли у него другая женщина?</li>
+                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
+                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                                <li>Что он планирует предпринять в ближайшее время?</li>
+                                <li>Как мне дальше поступить?</li>
+                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ОН + ОНА
+                            </h3>
+                            <p class="reading-lead">
+                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Что он чувствует ко мне?</li>
+                                <li>Что я для него значу в целом?</li>
+                                <li>Что он скрывает от меня?</li>
+                                <li>Есть ли у него другая женщина?</li>
+                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
+                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                                <li>Что он планирует предпринять в ближайшее время?</li>
+                                <li>Как мне дальше поступить?</li>
+                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ОН + ОНА
+                            </h3>
+                            <p class="reading-lead">
+                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Что он чувствует ко мне?</li>
+                                <li>Что я для него значу в целом?</li>
+                                <li>Что он скрывает от меня?</li>
+                                <li>Есть ли у него другая женщина?</li>
+                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
+                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                                <li>Что он планирует предпринять в ближайшее время?</li>
+                                <li>Как мне дальше поступить?</li>
+                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
                         <article class="reading-card">
                             <h3 class="reading-title">
                                 ОН + ОНА
