--- a/diagnostics.html
+++ b/diagnostics.html
@@ -342,6 +342,37 @@
                             Записаться на диагностику
                         </a>
                     </article>
+                    <!-- Диагностика на ДИАГНОСТИКА ПАРЫ -->
+                    <article class="diag-card">
+                        <figure class="diag-card-figure">
+                            <img src="assets/images/diagnostics-images/couple-diagnosis.png"
+                                alt="Таро-расклад на мои способности" class="diag-card-image">
+                        </figure>
+                        <h3 class="diag-card-title">«Диагностика пары»</h3>
+                        <p class="diag-card-tag">Диагностика</p>
+                        <p class="diag-card-text">
+                            Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                            Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                        </p>
+                        <ul class="diag-points">
+                            <li>Что он чувствует ко мне?</li>
+                            <li>Что я для него значу в целом?</li>
+                            <li>Что он скрывает от меня?</li>
+                            <li>Есть ли у него другая женщина?</li>
+                            <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?
+
+                            </li>
+                            <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                            <li>Что он планирует предпринять в ближайшее время?</li>
+                            <li>Как мне дальше поступить?</li>
+                            <li>Перспективы наших отношений на полгода.</li>
+                            <li>Совет от карт.</li>
+                        </ul>
+                        <p class="diag-price">4 000 ₽</p>
+                        <a href="#contact" class="diag-link">
+                            Записаться на диагностику
+                        </a>
+                    </article>
                 </div>
             </div>
         </section>
