--- a/readings.html
+++ b/readings.html
@@ -182,6 +182,7 @@
                                 <li>Совет от карт.</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
@@ -212,6 +213,7 @@
                                 <li>Совет от карт.</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
@@ -240,6 +242,7 @@
                                 <li>Совет от карт.</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
@@ -266,6 +269,7 @@
                                 <li>Совет от карт.</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
